--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,7 +18,6 @@ body {
 
 /* Barra de navegación con despliegue lateral */
 nav {
-	z-index: 1000;
 	height: 85px;
 	width: 100vw;
 	
@@ -32,6 +31,7 @@ nav {
 	    height: 25px;
 	    line-height: 25px;
 	    background-color: $primary-color--complementary;
+	    z-index: 1000;
 
 		.date {
 			color: $azul--logo-oscuro;
@@ -62,6 +62,7 @@ nav {
 	    line-height: 60px;
 	    background-color: $primary-color;
 	    color: #EEE;
+	    z-index: 1000;
 
 	    a {
 	        color: #fff;
